tests/paczka1/small_fuzzy/56979889.err
Error in line 4: A323 A126 60,2
Error in line 3: 63egPR A323 8,4
Error in line 6: 63egPR A649 36,5
